# TinyRender

./: CMakeLists.txt  TInyRenderer.cpp  geometry.cpp  geometry.h  homemade_gl.cpp  homemade_gl.h  model.cpp  model.h  tgaimage.cpp  tgaimage.h
